# cpp_vk_lib

./: .gitignore  .gitmodules  CMakeLists.txt  HOW TO BUILD WINDOWS!!!!.txt  buildwin.py  vcpkg.json
bot/: CMakeLists.txt
lib/: CMakeLists.txt
lib/src/net/: network.cpp
test/attachment_tests/: CMakeLists.txt
test/button_tests/: CMakeLists.txt  main.cpp
test/config_tests/: CMakeLists.txt  main.cpp
test/event_tests/: CMakeLists.txt  main.cpp
test/exception_tests/: CMakeLists.txt
test/string_util_tests/: CMakeLists.txt
test/task_queue_tests/: CMakeLists.txt
